# planner

./: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
domain/: Cargo.toml
domain/migrations/2023-07-17-124543_setup/: up.sql
domain/migrations/2023-07-21-130801_create_clients/: down.sql  up.sql
domain/migrations/2023-07-21-133458_create_projects/: down.sql  up.sql
domain/migrations/2023-07-21-163534_create_tasks/: down.sql  up.sql
domain/src/: action.rs  error.rs  extension.rs  lib.rs  model.rs  schema.rs
domain/src/action/: project.rs  task.rs
domain/src/model/: client.rs  profile.rs  project.rs  task.rs  user.rs
http/: Cargo.toml
http/src/: lib.rs
migrations/2023-07-17-124543_setup/: down.sql
migrations/2023-07-17-124557_users/: up.sql
migrations/2023-07-17-124602_profiles/: down.sql  up.sql
src/: main.rs  schema.rs
