[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
diesel = "2.1.0"
diesel-async = { version = "0.3.1", features = ["postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
