[package]
name = "planner-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
argon2 = { version = "0.5.1", features = ["std"] }
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["extras"] }
diesel-async = { version = "0.3.1", features = ["postgres"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
